# crawler

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: main_deploy.yml
config/: default.json
src/: lib.rs  main.rs  scheduler.rs  settings.rs
src/notifiers/: mod.rs  telegram_notifier.rs
src/parsers/: hotline_parser.rs  html_parser.rs  json_parser.rs  mod.rs
